<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pop_up_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
       >

        <TextView
            android:id="@+id/popup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_activity_panichead"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorblack"
            android:textStyle="bold" />

        <View
            android:id="@+id/boundry"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/popup_text"
            android:background="@color/inputtypecolor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/promt_reasonpanictaxi"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/inputtypecolor" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_marginTop="@dimen/activity_vertical_margin">


            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/prompt_panicone" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_panictwo" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_panicthree" />
        </RadioGroup>


        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radiogroup"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:mrl_rippleBackground="@color/colorPrimary"
            app:mrl_rippleColor="@color/black">

            <Button
                android:id="@+id/btn_savechange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:shadowColor="#A8A8A8"
                android:text="@string/action_confirm"
                android:textColor="@color/textbuttoncolor"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </RelativeLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/r1"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        app:mrl_rippleBackground="#fff"
        app:mrl_rippleColor="@color/black">

        <ImageButton
            android:id="@+id/cross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/crossblack" />
    </com.balysv.materialripple.MaterialRippleLayout>

</RelativeLayout>